grammar.js
    source_file: $ => optional(repeat1StmtSep($._module_scope_stmt)),

    // MODULE

    _module_scope_stmt: $ => choice(
      $._module_scope_decl,
      $.import_decl,
    ),

    type_alias_decl: $ => seq(
      $.type_alias_head,
      "=",
      field('rhs', $._type_expr),
    ),

    type_alias_head: $ => seq(
      optional($.access_modifier),
      "typealias",
      field('name', $.identifier),
      optional($.generic_clause),
    ),

    // PRODUCT TYPE

    product_type_decl: $ => declWith($.product_type_head, $._product_type_member_decl),

    product_type_head: $ => seq(
      optional($.access_modifier),
      "type",
      field('name', $.identifier),
      optional($.generic_clause),
      optional($.conformance_list),
    ),

    _product_type_member_decl: $ => choice(
      $._function_decl,
      // deinit-decl
      $.subscript_decl,
      $.property_decl,
      $.binding_decl,
      $.product_type_decl,
      $.type_alias_decl,
    ),

    // EXTENSION

    conformance_list: $ => seq(
      ":",
      $.name_type_expr,
      repeat(seq(",", $.name_type_expr))
    ),

    function_decl: $ => seq(
      field('head', $.function_head),
      field('signature', $.function_signature),
      optional(field('body', $._function_body)),
    ),

    function_head: $ => seq(
      optional($.access_modifier),
      optional($._member_modifiers),
      $.function_name,
      optional($.generic_clause),
      optional($.capture_list),
    ),

    function_signature: $ => prec.right(seq(
      '(',
      field('params', optional($._parameter_list)),
      ')',
      optional($.receiver_effect),
      optional(seq("->", field('returns', $._type_expr))),
      // type-aliases-clause?
    )),

    _parameter_list: $ => seq(
      $.parameter_decl,
      repeat(seq(",", $.parameter_decl)),
    ),

    parameter_decl: $ => seq(
      field('label', choice($.identifier, "_")),
      optional(field('name', $.identifier)),
      optional($.implicit_parameter_modifier),
      optional(seq(
        ":",
        field('type', $._parameter_type_expr),
      )),
      optional(seq(
        "=",
        field('default_value', $.expr),
      )),
    ),

    _parameter_type_expr: $ => seq(
      optional(field('convention', $.parameter_passing_convention)),
      $._type_expr,
    ),

    parameter_passing_convention: $ => choice("let", "inout", "sink", "yield"),

    _function_body: $ => choice(
      $.method_bundle_body,
      $.brace_stmt
    ),

    function_name: $ => choice(
      'init',
      seq('fun', field('name', $.identifier)),
      seq('fun', $.operator_notation, field('operator', $.operator))
    ),

    brace_stmt: $ => seq('{', optional($._stmt_list), '}'),

    _stmt_list: $ => repeat1StmtSep($.stmt),

    // _stmt_sep: $ => repeat1(seq(
    //   token.immediate(choice('\n', ';')),
    //   $._horizontal_space
    // )),

    stmt: $ => choice(
      $.brace_stmt,
      $.discard_stmt,
      $._loop_stmt,
      $.jump_stmt,
      $._decl_stmt,
      $.expr
    ),

    _loop_stmt: $ => choice(
      $.do_while_stmt,
      $.while_stmt,
      $.for_stmt,
    ),

    jump_stmt: $ => choice( // TODO: handle no newline in return and yield
      // conditional-binding-stmt
      seq(
        "return",
        field('return', $.expr),
      ),
      seq(
        "yield",
        field('yield', $.expr),
      ),
      "break",
      "continue",
    ),

    // DECLARATION STATEMENTS

    _decl_stmt: $ => choice(
      $.type_alias_decl,
      $.product_type_decl,
      $.extension_decl,
      $.conformance_decl,
      $.function_decl,
      $.subscript_decl,
      $.binding_decl,
    ),

    binding_decl: $ => seq(
      // inlined: binding-head
      optional($.access_modifier),
      optional($._member_modifiers),
      field('pattern', $.binding_pattern),
      optional(seq("=", field('initializer', $.expr))),
    ),

    // EXPRESSIONS

    expr: $ => prec.left(seq($._infix_expr_head, repeat(seq($._infix_expr_tail)))),

    _infix_expr_head: $ => choice(
      // async-expr
      // await-expr
      // unsafe-expr
      $._prefix_expr
    ), // TODO

    _infix_expr_tail: $ => choice(
      $.type_casting_tail,
      $.infix_operator_tail,
    ),

    type_casting_tail: $ => prec("type_float", seq(
      field('operator', choice("as", "as!")),
      field('type', $._type_expr),
    )),

    infix_operator_tail: $ => seq(
      field('operator', $.infix_operator),
      field('rhs', $._prefix_expr),
    ),

    _prefix_expr: $ => prec.left("expr_prefix", seq(optional($.prefix_operator), $._postfix_expr)),

    _compound_expr: $ => choice(
      $.value_member_expr,
      // static-value-member-expr
      $.function_call_expr,
      $.subscript_call_expr,
      $._primary_expr,
    ),

    value_member_expr: $ => prec("expr_select", seq(
      field('qualifier', $._compound_expr),
      ".",
      choice(
        field('label', $.primary_decl_ref),
        field('index', /[0-9]+/),
      ),
    )),

    function_call_expr: $ => prec("expr_select", seq(
      field('head', $._compound_expr),
      token.immediate("("),
      field('arguments', optional($._call_argument_list)),
      ")",
    )),

    subscript_call_expr: $ => prec("expr_select", seq(
      field('head', $._compound_expr),
      token.immediate("["),
      field('arguments', optional($._call_argument_list)),
      "]",
    )),

    _call_argument_list: $ => seq(
      $.call_argument,
      repeat(seq(',', $.call_argument)),
    ),

    call_argument: $ => seq(
      optional(seq(
        field('label', $.identifier),
        ":",
      )),
      $.expr,
    ),

    // PRIMARY EXPRESSIONS

    inout_expr: $ => prec("expr_inout", seq("&", $.expr)),

    implicit_member_ref: $ => seq(".", $.primary_decl_ref),

    static_argument_list: $ => genericScope(
      $.static_argument,
      repeat(seq(",", $.static_argument)),
    ),

    static_argument: $ => seq(
      optional(seq(
        field('label', $.identifier),
        ":",
      )),
      choice(
        field('expr', $.expr),
        field('type', $._type_expr),
      ),
    ),

    identifier_expr: $ => seq(
      field('entity', $._entity_identifier),
      // field('impls', repeat($._impl_identifier)),
    ),

    _entity_identifier: $ => prec("expr", choice(
      $.identifier,
      // function-entity-identifier
      //   operator-entity-identifier
    )),

    lambda_expr: $ => seq(
      "fun",
      optional($.capture_list),
      field('signature', $.function_signature),
      field('body', $.brace_stmt),
    ),

    conditional_expr: $ => seq(
      "if",
      field('condition', $._conditional_clause),
      field('then', $.brace_stmt),
      optional(seq(
        "else",
        field('else', choice($.conditional_expr, $.brace_stmt)),
      )),
    ),

    _conditional_clause: $ => seq(
      $.conditional_clause_item,
      repeat(seq(",", $.conditional_clause_item)),
    ),

    conditional_clause_item: $ => choice(
      seq($.binding_pattern, "=", $.expr),
      $.expr,
    ),

    binding_pattern: $ => prec.right(seq(
      field('introducer', $.binding_introducer),
      field('pattern', choice(
        $.tuple_pattern,
        $.wildcard_pattern,
        $.identifier,
      )),
      optional(seq(":", field('annotation', $._type_expr))),
    )),

    binding_introducer: $ => choice("let", "var", "sink", "inout"),

    infix_operator: $ => prec("operators", token(choice(
      operator,
      "=", "==", "..<", "...",
    ))),

    // TYPES
    _type_expr: $ => prec("type_simple", choice(
      // async-type-expr
      $.conformance_lens_type_expr,
      $.existential_type_expr,
      $.opaque_type_expr,
      // indirect-type-expr
      $.lambda_type_expr,
      // stored-projection-type-expr
      $.tuple_type_expr,
      // union-type-expr
      // wildcard-type-expr
      $.name_type_expr,
      seq('(', $._type_expr, ')'),
    )),

    lambda_type_expr: $ => prec("type_lambda", seq(
      optional($.lambda_environment),
      "(",
      optional(field('params', seq(
        $.lambda_parameter,
        repeat(seq(",", $.lambda_parameter)),
      ))),
      ")",
      optional($.receiver_effect),
      "->",
      field('returns', $._type_expr),
    )),

    lambda_environment: $ => choice(
      "thin",
      seq("[", optional($._type_expr), "]"),
    ),

    lambda_parameter: $ => prec("type_lambda", seq(
      optional(seq(
        field('label', $.identifier),
        ":",
      )),
      optional(field('convention', $.parameter_passing_convention)),
      field('type', $._type_expr),
    )),

    name_type_expr: $ => prec("type_select", seq(
      optional(seq(field('prefix', $._type_expr), ".")),
      // inlined: primary-type-def-ref
      field('identifier', $._type_identifier),
      optional(field('arguments', $.generic_argument_list)),
    )),

    _type_identifier: $ => prec("type", $.identifier),

    // GENERICS AND WHERE CLAUSES

    generic_clause: $ => genericScope(
      $._generic_parameter,
      repeat(seq(",", $._generic_parameter)),
      optional($.where_clause),
    ),

    _generic_parameter: $ => choice(
      $.generic_type_parameter,
      $.generic_value_parameter,
    ),

    generic_type_parameter: $ => seq(
      optional("@type"),
      field('name', $.identifier),
      optional(alias("...", 'variadic')),
      optional(seq(":", field('requires', $.trait_composition))),
      optional(seq("=", field('default', $._type_expr))),
    ),

    trait_composition: $ => prec("type_where", seq(
      $.name_type_expr,
      repeat(prec("type_where", seq("&", $.name_type_expr))),
    )),

    // MODIFIERS

    access_modifier: $ => choice('public'),

    _member_modifiers: $ => prec.left(choice(
      $.receiver_modifier,
      $.static_modifier,
      seq($.receiver_modifier, $.static_modifier),
      seq($.static_modifier, $.receiver_modifier),
    )),
    receiver_effect: $ => choice("inout", "sink"),

    identifier: $ => token(choice(
      // normal
      seq(
        /[_\p{Lu}\p{Ll}\p{Lt}\p{Lm}\p{Lo}\p{Nl}]/, // identifier-head
        /[\p{Lu}\p{Ll}\p{Lt}\p{Lm}\p{Lo}\p{Mn}\p{Mc}\p{Nl}\p{Nd}\p{Pc}]*/ // identifier-tail
      ),
      // escaped
      /`[^`\x0a\x0d]+`/
    )),

    // LITERALS

    integer_literal: $ => choice($.binary_literal, $.octal_literal, $.decimal_literal, $.hexadecimal_literal),
    decimal_literal: $ => decimal_literal,
    single_line_comment: $ => prec(99, token(/\/\/[^\r\n\v]*/)),
